# nd100x

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  GLASS.md  MERMAID_COLOR_STANDARDS.md  Makefile  README.md  SINTRAN.md  build.bat  build.sh  dap-analysis.md  dap_gui_debugger.ini  riscv64-toolchain.cmake  test-gateway-browser.js
.github/workflows/: build-release.yml  build-windows.yml
docs/: CRITICAL_ISSUES_FOUND.md  DAP-AUDIT-REPORT.md  DAP_CAPABILITIES_ANALYSIS.md  DAP_DEBUGGER_CLIENT_UPDATES.md  DAP_DEBUGGER_UPDATE_2026-05.md  DAP_IMPLEMENTATION_SUMMARY.md  DAP_INTEGRATION_GUIDE.md  DAP_UPDATES_README.md  GATEWAY-PROTOCOL.md  HOWTO_BUILD.md  HOWTO_BUILD_RISCV.md  HOWTO_BUILD_WASM.md  HOWTO_DEBUGGING.md  INSTRUCTION_ANALYSIS_FUNCTIONS.md  MIXED_STEPPING_IMPLEMENTATION_GUIDE.md  SINTRAN-Commands.html  SINTRAN-Commands.md  SMD-IMAGE-MAINTENANCE.md  STABS_PARSER_IMPLEMENTATION.md  STEPPING_ANALYSIS.md  SYSTEMS.md  TESTPLAN-CharacterDevices.md  TESTPLAN-PrinterPDF.md  VSCODE_EXTENSION_UPDATES.md  background-worker-todo.md  cpu_documentation.md  shadow-ram.md
images/: CONFIGURATIO-C08.BPUN  FILSYS-INV-Q04.BPUN  Nd-210523I01-XX-01D.img
src/cpu/: CMakeLists.txt  Makefile  bcd.c  cpu.c  cpu_bkpt.c  cpu_disasm.c  cpu_instr.c  cpu_mms.c  cpu_mopc.c  cpu_protos.h  cpu_regs.c  cpu_types.h  expr_eval.c  expr_eval.h  float.c
src/debugger/: CMakeLists.txt  Makefile  debugger.c  debugger.h  debugger_protos.h  symbols_support.h
src/devices/: CMakeLists.txt  Makefile  device.c  devicemanager.c  devices_protos.h  devices_types.h
src/devices/floppy/: deviceFloppyDMA.c  deviceFloppyDMA.h  deviceFloppyPIO.c  deviceFloppyPIO.h
src/devices/hdlc/: chipCOM5025.c  chipCOM5025.h  chipCOM5025Registers.c  chipCOM5025Registers.h  deviceHDLC.c  deviceHDLC.h  dmaControlBlocks.c  dmaControlBlocks.h  dmaDCB.c  dmaDCB.h  dmaEngine.c  dmaEngine.h  dmaEnum.h  dmaParamBuf.c  dmaParamBuf.h  dmaReceiver.c  dmaReceiver.h  dmaTransmitter.c  dmaTransmitter.h  hdlc-notes.txt  hdlc.cs  hdlcFrame.c  hdlcFrame.h  hdlc_constants.h  hdlc_crc.c  hdlc_crc.h  modem.c  modem.h  tcpReceiveBuffer.c  tcpReceiveBuffer.h
src/devices/hdlc/c_sharp/: NDBusHDLC.cs
src/devices/hdlc/c_sharp/HDLC/: DCB.cs  DMAControlBlocks.cs  DMAEngine-UnitTest-Analysis.md  DMAEngine.cs  DMAReceiver.cs  DMATransmitter.cs  Delegates.cs  Enums.cs  HDLC-Improvements.md  ParameterBuffer.cs  Registers.cs
src/devices/hdlc/doc/: convert.md  xmsg-deep-analysis.md
src/devices/lineprinter/: deviceLinePrinter.c  deviceLinePrinter.h
src/devices/panel/: panel.c  panel.h
src/devices/papertape/: devicePapertape.c  devicePapertape.h
src/devices/papertapewriter/: devicePaperTapeWriter.c  devicePaperTapeWriter.h
src/devices/rtc/: deviceRTC.c  deviceRTC.h
src/devices/smd/: deviceSMD.c  deviceSMD.h  diskSMD.c  diskSMD.h
src/devices/terminal/: deviceTerminal.c  deviceTerminal.h
src/frontend/nd100wasm/: CMakeLists.txt  nd100wasm.c  nd100wasm_protos.h
src/frontend/nd100x/: CMakeLists.txt  Makefile  charset.c  charset.h  config.c  menu.c  nd100x.c  nd100x.conf  nd100x_protos.h  nd100x_types.h  screenmenu.c  screenmenu.h  vscreen.c  vscreen.h
src/machine/: CMakeLists.txt  Makefile  io.c  machine.c  machine_protos.h  machine_types.h
src/ndlib/: CMakeLists.txt  Makefile  aout.c  download.c  download.h  escp.c  escp.h  keyboard.c  keyboard.h  load_aout.c  load_bpun.c  log.c  ndlib.c  ndlib_protos.h  ndlib_protos_preamble.h  ndlib_types.h  net_compat.c  net_compat.h  pdfwriter.c  pdfwriter.h  printjob.c  printjob.h  telnetserver.c  telnetserver.h
template/: index.html
template-glass/: index.html  smd-catalog.json  staticwebapp.config.json  terminal-popout.html
template-glass/PDF/: README.md
template-glass/css/: styles.css  themes.css
template-glass/data/: logical-device-numbers.json
template-glass/js/: breakpoints.js  cpu-load-graph.js  debugger.js  disassembly.js  disk-io-worker.js  drive-registry.js  emu-proxy-worker.js  emu-proxy.js  emu-worker.js  emulation.js  floppy-browser.js  help-window.js  module-init.js  ndfs-viewer.js  pagetables.js  paper-tape.js  printer.js  segment-disassembler.js  sintran-dev-names.js  sintran-devices.js  sintran-processes.js  sintran-queues.js  sintran-reentrant.js  sintran-rt-names.js  sintran-seg-names.js  sintran-segments.js  sintran-symbols.js  sintran.js  smd-manager.js  smd-storage.js  terminal-bridge.js  terminal-core.js  terminal-manager.js  terminal-popout-app.js  terminal.js  theme-manager.js  toolbar.js
template-glass/js/tests/: test_disk_analysis.py  test_disk_read.py  test_find_cblst.py  test_find_ped_on_disk.py  test_segment_disk_layout.py
template-glass/lib/retroterm/: retroterm.css  retroterm.js  retroterm.js.map
template-glass/ts/: terminal-bridge.ts  terminal-core.ts  terminal-manager.ts  terminal-popout-app.ts  tsconfig.json  types.d.ts
template/floppies/: document-category.json  documents.json  floppies.json  products.json
test/screenshots/: test-vk-resize.mjs
tests/: CMakeLists.txt  test_configure.sh  test_escp.c  test_glass_windows.html  test_glass_windows.sh  test_hdlc_crc.c  test_hdlc_frame.c  test_hdlc_main.c  test_pdfwriter.c  test_printer_main.c  test_printjob.c  test_tcp_receive_buffer.c
tools/: serve-coop.mjs  serve-coop.py
tools/mkptypes/: Makefile  README
tools/nd100-gateway/: gateway.conf.json  gateway.js  package.json  test-gateway.js
